<resources>
    <string name="app_name">FragmentsExmple1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="Basic_Info">Basic Info</string>

    <string name="yes_message">ARTICLE: Like</string>
    <string name="no_message">ARTICLE: Thanks</string>

    <string name="Name">Name : </string>
    <string name="Age">Age : </string>
    <string name="email">Email : </string>
    <string name="university">University : </string>
    <string name="button_fragment_2">Continue </string>
    <string name="Continue">Continue </string>


    <string name="Gender">Gender : </string>
    <string name="Female">Female </string>
    <string name="Male">Male </string>

    <string name="confirm">I confirm I have read and agree to use the app </string>
    <string name="Finish"> Finish </string>


    <string name="question_article">LIKE THE ARTICLE?</string>
</resources>