<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color2"
    tools:context=".Fragment2">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/Basic_Info"
        android:textColor="@color/color3"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ed_fragment2_name"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/Name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/ed_fragment2_email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/ed_fragment2_age"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ed_fragment2_age"
        app:layout_constraintTop_toBottomOf="@+id/ed_fragment2_age" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="325dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/ed_fragment2_email"
        app:layout_constraintStart_toStartOf="@+id/ed_fragment2_email"
        app:layout_constraintTop_toBottomOf="@+id/ed_fragment2_unversity">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="132dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|start"
            android:text="@string/Gender"
            android:textSize="19sp" />

        <RadioButton
            android:id="@+id/radioBut_fragment2_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Female" />

        <RadioButton
            android:id="@+id/radioBut_fragment2_male"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Male" />
    </RadioGroup>

    <EditText
        android:id="@+id/ed_fragment2_unversity"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/university"
        app:layout_constraintEnd_toEndOf="@+id/ed_fragment2_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ed_fragment2_email"
        app:layout_constraintTop_toBottomOf="@+id/ed_fragment2_email" />

    <EditText
        android:id="@+id/ed_fragment2_age"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/Age"
        android:ems="4"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@+id/ed_fragment2_name"
        app:layout_constraintStart_toStartOf="@+id/ed_fragment2_name"
        app:layout_constraintTop_toBottomOf="@+id/ed_fragment2_name" />

    <Button
        android:id="@+id/but_fragment2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:text="@string/button_fragment_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>